# AICamera

./: .gitignore  .gitmodules  CONTRIBUTING.md  Exporting Squeezenet to mobile.ipynb  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/bwasti/aicamera/: ExampleInstrumentedTest.java
app/src/androidTest/java/facebook/f8demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: predict_net.pb.orig  shufflenet_predict.pb  squeeze_predict_net.pb
app/src/main/cpp/: bitmap.cpp  caffe2.link  classes.h  native-lib.cpp  neuralnet-lib.cpp
app/src/main/cpp/caffe2/contrib/ios/metal/: FBMetalCNNConstantValues.h  FBMetalCNNConvolution.h  FBMetalCNNNoOp.h  FBMetalCNNPRelu.h  FBMetalCNNParameters.h  MetalCaffeContext.h  MetalImageFilter.h  data_conversion.h  metal_convolution.h  metal_convolution_mtlbuffer.h
app/src/main/cpp/caffe2/contrib/snpe_op/: cat_png_data_chw.h  cat_png_data_hwc.h  data_chw.h  data_hwc.h
app/src/main/cpp/caffe2/core/: macros.h  net_simple.h
app/src/main/cpp/caffe2/operators/: reshape_op.h
app/src/main/cpp/caffe2/proto/: caffe2.pb.h  caffe2_legacy.pb.h  hsm.pb.h  metanet.pb.h  old_caffe2.pb.h  old_caffe2_legacy.pb.h  predictor_consts.pb.h  prof_dag.pb.h
app/src/main/cpp/caffe2/utils/: .proto_utils.h.swp
app/src/main/java/com/example/bwasti/aicamera/: MainActivity.java
app/src/main/java/facebook/f8demo/: ClassifyCamera.java
app/src/main/res/drawable/: ic_logo.xml  ic_thumb.xml
app/src/main/res/layout/: activity_classify_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/bwasti/aicamera/: ExampleUnitTest.java
app/src/test/java/facebook/f8demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
